2000-08-02  Adam Spiers  <adam@spiers.net>

	* 12486: Completion/Base/{.distfiles,_cache_invalid,_retrieve_cache,
	_store_cache}, Completion/Builtins/_zstyle, Completion/Linux/_rpm,
	Completion/User/_perl_modules, Doc/Zsh/compsys.yo: new completion
	caching layer

2000-08-02  Sven Wischnowsky  <wischnow@zsh.org>

	* 12483: Completion/Base/_arguments, Completion/Core/_complete,
 	Doc/Zsh/compsys.yo: if compcontext is an assoc, the keys are the
 	completions and the values are their descriptions
	
	* 12475: Completion/Base/_arguments: prefer user-defined specs
 	over ones derived from --help output
	
2000-08-01  Sven Wischnowsky  <wischnow@zsh.org>

	* Jan Fedak: 12463: Completion/User/_slrn: new completion function
	for slrn
	
	* 12462: Completion/Base/_arguments: fix for automatically
 	recognised options, don't expect an argument after each of them
	
	* 12453: Completion/Bsd/_bsd_pkg, Completion/Bsd/_kld,
 	Completion/Commands/_next_tags, Completion/User/_cvs,
 	Completion/User/_mailboxes, Completion/X/_xset,
 	Completion/X/_xwit, Src/exec.c: remove tests for kshautoload (use
 	zcompile -z); fix for setting scriptname for functions that
 	redefine themselves
	
	* 12449: Completion/Base/_arguments, Completion/Base/_values,
 	Completion/Core/_complete, Doc/Zsh/compsys.yo: make $compcontext
 	more powerful and easier to use for simple cases
	
2000-07-31  Peter Stephenson  <pws@csr.com>

	* Config/version.mk: 3.1.9-dev-4.

	* unposted: Completion/Core/.distfiles: add compaudit

2000-07-31  Sven Wischnowsky  <wischnow@zsh.org>

	* 12439: Src/hist.c: isalpha() -> ialpha(); avoid a compiler
 	warning
	
	* 12438: Doc/Zsh/compsys.yo: clarify manual for menu style;
 	select= and yes= may be given both a number and one of the long*
 	values at the same time
	
2000-07-30  Andrew Main <zefram@zsh.org>

	* 12436: Doc/Zsh/invoke.yo, Src/init.c: Make -b behave like
	the csh -b, permitting more options to be stacked after it and