@@ -863,7 +863,8 @@ AC_CHECK_FUNCS(strftime difftime gettimeofday \
 	       uname \
 	       signgam \
 	       putenv getenv \
-	       brk sbrk)
+	       brk sbrk \
+	       pathconf)
 AC_FUNC_STRCOLL
 
 if test $ac_cv_func_setpgrp = yes; then
